[package]
name = "sieve"
version = "0.1.0"
authors = ["Bernardo Meurer <meurerbernardo@gmail.com>"]
description = "Fast segmented sieve of Erasthotenes implemented in Rust"
repository = "https://github.com/bemeurer/sieve"
readme = "./README.md"
keywords = ["erasthotenes", "sieve", "find", "primes", "fast"]
categories = ["algorithms", "science"]
license = "BSD-3-Clause"
license-file = "./LICENSE"
maintenance = { status = "actively-developed" }

[dependencies]
