[package]
name = "sieve"
version = "0.1.0"
authors = ["Bernardo Meurer <meurerbernardo@gmail.com>"]
description = "Fast segmented sieve of Erasthotenes implemented in Rust"
repository = "https://github.com/bemeurer/sieve"
readme = "./README.md"
keywords = ["erasthotenes", "sieve", "find", "primes", "fast"]
categories = ["algorithms", "science"]
license = "BSD-3-Clause"
build = "build.rs"

[features]
optimize-cache = ["cache-size"]

[build-dependencies]
cache-size = { version = "0.3.2", optional = true }

[dependencies]
num = "0.2"

[profile.dev]
opt-level = 1
debug = true
rpath = false
lto = false
codegen-units = 16
panic = 'unwind'
incremental = true
overflow-checks = false

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
overflow-checks = false

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
overflow-checks = false
